Removed unused middleware, and extracted reservabletrait into a class (outside of this project); dependency on local lRedis has been removed

--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,12 @@
             "Eventix\\Cache\\": "src"
         }
     },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Eventix\\Cache\\CacheServiceProvider"
+            ]
+        }
+    },
     "minimum-stability": "stable"
 }
